--- a/ADSProject/Views/Grupo/Index.cshtml
+++ b/ADSProject/Views/Grupo/Index.cshtml
@@ -79,6 +79,9 @@
                                 <a class="btn btn-danger eliminar"
                                    asp-route-idGrupo="@item.idGrupo"
                                    asp-action="Delete">Eliminar</a>
+                                <a class="btn btn-secondary"
+                                   asp-route-idGrupo="@item.idGrupo"
+                                   asp-action="Form" asp-controller="AsignacionGrupo">Asignar grupo</a>
                             </td>
                         </tr>
                     }
