Se realizo cambios en el diseño de views/Home en el index

--- a/ADSProject/Views/AsignacionGrupo/Form.cshtml
+++ b/ADSProject/Views/AsignacionGrupo/Form.cshtml
@@ -9,7 +9,7 @@
 <hr />
 
 <form asp-action="Form">
-    <input type="hidden" id="IdGrupo" value="@Model.idGrupo" name="Id" />
+    <input type="hidden" id="IdGrupo" value="@Model.idGrupo" name="Id Grupo" />
     <input type="hidden" id="_redirectURL" value='@Url.Action("Index", "Grupo")' />
     <div class="form-horizontal">
         <div class="row">
