Se realizaron cambios en diseño de los index de carreras y profesores

--- a/ADSProject/Views/Profesor/Index.cshtml
+++ b/ADSProject/Views/Profesor/Index.cshtml
@@ -20,7 +20,7 @@
     <div class="col-sm-12">
         @if (Model.Count() > 0)
         {
-            <table class="table">
+            <table class="table table-bordered table-striped">
                 <thead>
                     <tr>
                         <th>
@@ -35,7 +35,7 @@
                         <th>
                             @Html.DisplayNameFor(model => model.correoEstudiante)
                         </th>
-                        <th></th>
+                        <th>Acciones</th>
                     </tr>
                 </thead>
                 <tbody>
