--- a/ADSProject/Views/Carrera/Index.cshtml
+++ b/ADSProject/Views/Carrera/Index.cshtml
@@ -21,7 +21,7 @@
     <div class="col-sm-12">
         @if (Model.Count() > 0)
         {
-            <table class="table">
+            <table class="table table-bordered table-striped">
                 <thead>
                     <tr>
                         <th>
@@ -33,7 +33,7 @@
                         <th>
                             @Html.DisplayNameFor(model => model.NombreCarrera)
                         </th>
-                        <th></th>
+                        <th>Acciones</th>
                     </tr>
                 </thead>
                 <tbody>
