--- a/ADSProject/Views/AsignacionGrupo/Form.cshtml
+++ b/ADSProject/Views/AsignacionGrupo/Form.cshtml
@@ -9,7 +9,7 @@
 <hr />
 
 <form asp-action="Form">
-    <input type="hidden" id="IdGrupo" value="@Model.idGrupo" name="Id Grupo" />
+    <input type="hidden" id="IdGrupo" value="@Model.idGrupo" name="Id" />
     <input type="hidden" id="_redirectURL" value='@Url.Action("Index", "Grupo")' />
     <div class="form-horizontal">
         <div class="row">
@@ -121,94 +121,94 @@
     }
 
     <script>
-    // Se inicia con el boton agregar deshabilitado
-    if ($("#IdEstudiante option:selected").text() === "[Seleccione una opción]") {
-        $('#btnAgregar').prop('disabled', true);
-    }
-    // Funcion anonima que deshabilita el primer elemento del dropdown
-    $(function () {
-        $("select[id='IdEstudiante'] option:first-child").attr("disabled", "disabled");
-    })
-    // Se deshabilita el boton para guardar (ya que se requiere que se seleccione un elemento)
-    if($("select[id='IdEstudiante'] option:first-child")){
-        $('#btnGuardar').prop('disabled', true);
-    }
-    function customValidate() {
-       // 1. Se valida si un elemento fue seleccionado en el dropdown
+        // Se inicia con el boton agregar deshabilitado
         if ($("#IdEstudiante option:selected").text() === "[Seleccione una opción]") {
-
-            $('#validationEstudiante').css('display', 'inline');
             $('#btnAgregar').prop('disabled', true);
+        }
+        // Funcion anonima que deshabilita el primer elemento del dropdown
+        $(function () {
+            $("select[id='IdEstudiante'] option:first-child").attr("disabled", "disabled");
+        })
+        // Se deshabilita el boton para guardar (ya que se requiere que se seleccione un elemento)
+        if ($("select[id='IdEstudiante'] option:first-child")) {
             $('#btnGuardar').prop('disabled', true);
-            return false;
-        } else {
-            $('#validationEstudiante').css('display', 'none');
-            $('#btnAgregar').removeAttr('disabled');
-            $('#btnGuardar').removeAttr('disabled');
         }
-        var currentID = $("#IdEstudiante").val();
-        var encontrado = false;
-       // 2. Se valida si un elemento ya fue insertado en la tabla (previo a guardar)
-        $(".IdEstudiante").each(function (e) {
-            if ($(this).val() == currentID) {
-                $('#validationIdEstudiante').css('display', 'inline');
-                encontrado = true;
+        function customValidate() {
+            // 1. Se valida si un elemento fue seleccionado en el dropdown
+            if ($("#IdEstudiante option:selected").text() === "[Seleccione una opción]") {
+
+                $('#validationEstudiante').css('display', 'inline');
+                $('#btnAgregar').prop('disabled', true);
+                $('#btnGuardar').prop('disabled', true);
+                return false;
+            } else {
+                $('#validationEstudiante').css('display', 'none');
+                $('#btnAgregar').removeAttr('disabled');
+                $('#btnGuardar').removeAttr('disabled');
             }
-        });
-        // Si el elemento no existe (se procede a habilitar los botones)
-        if (!encontrado) {
-            $('#validationIdEstudiante').css('display', 'none');
-            $('#btnAgregar').removeAttr('disabled');
-            $('#btnGuardar').removeAttr('disabled');
-            return true;
-        } else {
-             $('#btnAgregar').prop('disabled', true);
-             $('#btnGuardar').prop('disabled', true);
-            return false;
+            var currentID = $("#IdEstudiante").val();
+            var encontrado = false;
+            // 2. Se valida si un elemento ya fue insertado en la tabla (previo a guardar)
+            $(".IdEstudiante").each(function (e) {
+                if ($(this).val() == currentID) {
+                    $('#validationIdEstudiante').css('display', 'inline');
+                    encontrado = true;
+                }
+            });
+            // Si el elemento no existe (se procede a habilitar los botones)
+            if (!encontrado) {
+                $('#validationIdEstudiante').css('display', 'none');
+                $('#btnAgregar').removeAttr('disabled');
+                $('#btnGuardar').removeAttr('disabled');
+                return true;
+            } else {
+                $('#btnAgregar').prop('disabled', true);
+                $('#btnGuardar').prop('disabled', true);
+                return false;
+            }
         }
-    }
-    // Cuando se selecciona un elemento del dropdown
-      $("#IdEstudiante").change(function () {
-        customValidate(); // llamado a la funcion personalizada.
-    });
-    // Cuando se selecciona el boton eliminar de la tabla
-    function quitarFila(elemento) {
-        $(elemento).parent().closest("tr").remove();
-        recalcularIndices();
-    }
-
-    // Agregar un registro a la tabla
-    function agregarFila() {
-        var fila = $("<tr><td><span>" + $("#IdEstudiante option:selected").text() + "</span><input type='hidden' value='" + $("#IdEstudiante").val() + "' class='IdEstudiante' /><input type='hidden' value='" + $("#IdGrupo").val() + "' class='IdGrupo' /></td><td><button class='btn btn-xs btn-danger' onclick='quitarFila(this)'>Eliminar</button></td></tr>");
-        $("tbody").append(fila);
-        recalcularIndices();
-    }
-    // Cuando se elimina un registro de la tabla es necesario recalcular los indices
-    function recalcularIndices() {
-        var i = 0;
-        $(".IdEstudiante").each(function () {
-            $(this).attr("name", "AsignacionGrupos[" + i + "].IdEstudiante");
-            i++;
+        // Cuando se selecciona un elemento del dropdown
+        $("#IdEstudiante").change(function () {
+            customValidate(); // llamado a la funcion personalizada.
         });
-        i = 0;
-        $(".IdGrupo").each(function () {
-            $(this).attr("name", "AsignacionGrupos[" + i + "].idGrupo");
-            i++;
-        });
-        // Se regresa el valor del select al primer indice es decir ([Seleccione una opcion])
-        $("#IdEstudiante").prop('selectedIndex',0);
-        // Se deshabilita el boton para agregar.
-        $('#btnAgregar').prop('disabled', true);
+        // Cuando se selecciona el boton eliminar de la tabla
+        function quitarFila(elemento) {
+            $(elemento).parent().closest("tr").remove();
+            recalcularIndices();
+        }
 
-        // Se deshabilita el boton para guardar un elemento
-        $('#btnGuardar').prop('disabled', true);
-    }
-    $(document).ready(function () {
-        //Agregamos a los formularios la clase form-ajax
-        //La cual activa el formulario para trabajar con Ajax
-        $("form").addClass("form-ajax");
-        //Activamos Ajax
-        initAjaxForm();
-    });
+        // Agregar un registro a la tabla
+        function agregarFila() {
+            var fila = $("<tr><td><span>" + $("#IdEstudiante option:selected").text() + "</span><input type='hidden' value='" + $("#IdEstudiante").val() + "' class='IdEstudiante' /><input type='hidden' value='" + $("#IdGrupo").val() + "' class='IdGrupo' /></td><td><button class='btn btn-xs btn-danger' onclick='quitarFila(this)'>Eliminar</button></td></tr>");
+            $("tbody").append(fila);
+            recalcularIndices();
+        }
+        // Cuando se elimina un registro de la tabla es necesario recalcular los indices
+        function recalcularIndices() {
+            var i = 0;
+            $(".IdEstudiante").each(function () {
+                $(this).attr("name", "AsignacionGrupos[" + i + "].IdEstudiante");
+                i++;
+            });
+            i = 0;
+            $(".IdGrupo").each(function () {
+                $(this).attr("name", "AsignacionGrupos[" + i + "].idGrupo");
+                i++;
+            });
+            // Se regresa el valor del select al primer indice es decir ([Seleccione una opcion])
+            $("#IdEstudiante").prop('selectedIndex', 0);
+            // Se deshabilita el boton para agregar.
+            $('#btnAgregar').prop('disabled', true);
+
+            // Se deshabilita el boton para guardar un elemento
+            $('#btnGuardar').prop('disabled', false);
+        }
+        $(document).ready(function () {
+            //Agregamos a los formularios la clase form-ajax
+            //La cual activa el formulario para trabajar con Ajax
+            $("form").addClass("form-ajax");
+            //Activamos Ajax
+            initAjaxForm();
+        });
     </script>
 }
