--- a/ADSProject/Views/Grupo/Index.cshtml
+++ b/ADSProject/Views/Grupo/Index.cshtml
@@ -42,7 +42,7 @@
                         <th>
                             @Html.DisplayNameFor(model => model.anio)
                         </th>
-                        <th></th>
+                        <th>Acciones</th>
                     </tr>
                 </thead>
                 <tbody>
